# Motion-vision

./: .gitignore  README.md
Kinematics/: settings.gradle
Kinematics/app/: build.gradle
Kinematics/app/src/main/: AndroidManifest.xml
Kinematics/app/src/main/java/com/krakert/kinematics/: MainActivity.kt
Kinematics/app/src/main/java/com/krakert/kinematics/models/: Segment.kt
Kinematics/app/src/main/java/com/krakert/kinematics/navigation/: NavHost.kt  Screens.kt
Kinematics/app/src/main/java/com/krakert/kinematics/ui/screens/: Forward.kt  Reserse.kt
Kinematics/app/src/main/java/com/krakert/kinematics/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
Kinematics/app/src/main/java/com/krakert/kinematics/ui/viewmodel/: ForwardViewModel.kt  ReverseViewModel.kt
Kinematics/app/src/main/res/values/: strings.xml  themes.xml
Kinematics/gradle/wrapper/: gradle-wrapper.properties
OpenCV/: Assignment_1.cpp  Assignment_2.cpp  Assignment_7.cpp  Assignment_9.cpp  CMakeLists.txt
